# TVMvsCpp

./: .gitignore  .gitmodules  Dockerfile  README.md  compile.py  cross_compile.py  inference_tvm.py  monitor_pid.sh  pytorch_speed.py  requirements.txt  tvm_speed.py  tvm_test.ipynb
cpp/: README.md  main.cpp  resnet.cpp  resnet.hpp  test_save_and_load.cpp
cpp/resnet/cv2/: Makefile  README.md  bn.cpp  conv.cpp  conv_bn.cpp  fc.cpp  main.cpp  modules.hpp  pooling.cpp  relu.cpp  residual.cpp  resnet.cpp  resnet.hpp  softmax.cpp
cpp/resnet/libtorch/: CMakeLists.txt  README.md  build.sh  download_model.py  load_model.py  main.cpp  save_model_example.py
pytorch/: README.md  convert_pth_2_npz.py  requirements.txt  train.py
pytorch/configs/: config.yaml
pytorch/model/: readme.md
pytorch/src/datasets/: __init__.py  cifar10.py  mnist.py
pytorch/src/models/: __init__.py  mobilenet.py  mobilenetv2.py  mobilenetv3.py  resnet.py
pytorch/src/trainers/: trainer.py
pytorch/tests/: test_models.py
